--- a/selfie.html
+++ b/selfie.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Dec 08 2020 02:49:32 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jan 04 2021 12:29:47 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5fb594bfbf969c15d89e6d86" data-wf-site="5fadfc3ded1d4d37d52e835d">
 <head>
   <meta charset="utf-8">
@@ -12,7 +12,7 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/portfolio-7760df.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Ubuntu:300,300italic,400,400italic,500,500italic,700,700italic","Exo:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic","Ubuntu:300,300italic,400,400italic,500,500italic,700,700italic","Exo:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
@@ -30,7 +30,7 @@
       </div>
     </div>
   </div>
-  <div class="righttitle"><img src="images/Screen-Shot-2020-11-18-at-6.19.29-PM.png" loading="lazy" sizes="43vw" srcset="images/Screen-Shot-2020-11-18-at-6.19.29-PM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-6.19.29-PM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-6.19.29-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-6.19.29-PM.png 1094w" alt="" class="image-36">
+  <div class="righttitle"><img src="images/Screen-Shot-2020-11-18-at-6.19.29-PM.png" loading="lazy" sizes="(max-width: 479px) 86vw, 43vw" srcset="images/Screen-Shot-2020-11-18-at-6.19.29-PM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-6.19.29-PM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-6.19.29-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-6.19.29-PM.png 1094w" alt="" class="image-36">
     <div class="div-block-8"></div>
     <div class="skh2">problem</div>
     <div class="skpara">How might we improve the livability of the city by strengthening art viewers’ bonds with their loved ones and their city through the sharing of public art?</div>
@@ -39,20 +39,20 @@
     <div class="skh2">methods</div>
     <div class="columns-6 w-row">
       <div class="w-col w-col-4">
-        <div class="skh3"><strong class="bold-text-4">background research</strong></div><img src="images/Screen-Shot-2020-11-18-at-6.28.11-PM.png" loading="lazy" sizes="(max-width: 479px) 191.96875px, (max-width: 767px) 57vw, (max-width: 991px) 20vw, (max-width: 6121px) 23vw, 1408px" srcset="images/Screen-Shot-2020-11-18-at-6.28.11-PM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-6.28.11-PM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-6.28.11-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-6.28.11-PM.png 1408w" alt="" class="image-37">
+        <div class="skh3"><strong class="bold-text-4">background research</strong></div><img src="images/Screen-Shot-2020-11-18-at-6.28.11-PM.png" loading="lazy" sizes="(max-width: 479px) 82vw, (max-width: 767px) 57vw, (max-width: 991px) 20vw, (max-width: 6121px) 23vw, 1408px" srcset="images/Screen-Shot-2020-11-18-at-6.28.11-PM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-6.28.11-PM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-6.28.11-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-6.28.11-PM.png 1408w" alt="" class="image-37">
         <p class="colpara">What’s the current state of the relationship between art viewers and public art?</p>
       </div>
       <div class="w-col w-col-4">
-        <div class="skh3"><strong class="bold-text-4">observe and intercept</strong></div><img src="images/Screen-Shot-2020-11-18-at-6.28.22-PM.png" loading="lazy" sizes="(max-width: 479px) 191.96875px, (max-width: 767px) 57vw, (max-width: 991px) 20vw, (max-width: 6121px) 23vw, 1408px" srcset="images/Screen-Shot-2020-11-18-at-6.28.22-PM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-6.28.22-PM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-6.28.22-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-6.28.22-PM.png 1408w" alt="" class="image-37">
+        <div class="skh3"><strong class="bold-text-4">observe and intercept</strong></div><img src="images/Screen-Shot-2020-11-18-at-6.28.22-PM.png" loading="lazy" sizes="(max-width: 479px) 82vw, (max-width: 767px) 57vw, (max-width: 991px) 20vw, (max-width: 6121px) 23vw, 1408px" srcset="images/Screen-Shot-2020-11-18-at-6.28.22-PM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-6.28.22-PM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-6.28.22-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-6.28.22-PM.png 1408w" alt="" class="image-37">
         <p class="colpara">With whom and how do art viewers share their experience with public art?</p>
       </div>
       <div class="w-col w-col-4">
-        <div class="skh3"><strong class="bold-text-4">think aloud protocol</strong></div><img src="images/Screen-Shot-2020-11-18-at-6.28.36-PM.png" loading="lazy" sizes="(max-width: 479px) 191.96875px, (max-width: 767px) 57vw, (max-width: 991px) 20vw, (max-width: 6354px) 22vw, 1398px" srcset="images/Screen-Shot-2020-11-18-at-6.28.36-PM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-6.28.36-PM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-6.28.36-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-6.28.36-PM.png 1398w" alt="" class="image-37">
+        <div class="skh3"><strong class="bold-text-4">think aloud protocol</strong></div><img src="images/Screen-Shot-2020-11-18-at-6.28.36-PM.png" loading="lazy" sizes="(max-width: 479px) 82vw, (max-width: 767px) 57vw, (max-width: 991px) 20vw, (max-width: 6354px) 22vw, 1398px" srcset="images/Screen-Shot-2020-11-18-at-6.28.36-PM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-6.28.36-PM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-6.28.36-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-6.28.36-PM.png 1398w" alt="" class="image-37">
         <p class="colpara">What is viewer’s current experience with sharing art on social media? What types of art do they choose to share and why?</p>
       </div>
     </div>
     <div class="columns-7 w-row">
-      <div class="w-col w-col-3"></div>
+      <div class="column-14 w-col w-col-3"></div>
       <div class="w-col w-col-3">
         <div class="skh3"><strong class="bold-text-4">speed dating</strong></div><img src="images/Screen-Shot-2020-11-18-at-6.28.59-PM.png" loading="lazy" sizes="(max-width: 479px) 82vw, (max-width: 767px) 83vw, (max-width: 991px) 19vw, (max-width: 6940px) 20vw, 1388px" srcset="images/Screen-Shot-2020-11-18-at-6.28.59-PM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-6.28.59-PM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-6.28.59-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-6.28.59-PM.png 1388w" alt="" class="image-37">
         <p class="colpara">Do the user needs we discovered resonate with people?</p>
@@ -61,7 +61,7 @@
         <div class="skh3"><strong class="bold-text-4">experience prototyping</strong></div><img src="images/Screen-Shot-2020-11-18-at-6.29.13-PM.png" loading="lazy" sizes="(max-width: 479px) 82vw, (max-width: 767px) 83vw, (max-width: 991px) 19vw, (max-width: 6950px) 20vw, 1390px" srcset="images/Screen-Shot-2020-11-18-at-6.29.13-PM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-6.29.13-PM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-6.29.13-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-6.29.13-PM.png 1390w" alt="" class="image-37">
         <p class="colpara">How do art viewers feel interacting with the kiosk? Did the kiosk improve shareability of public art?</p>
       </div>
-      <div class="w-col w-col-3"></div>
+      <div class="column-15 w-col w-col-3"></div>
     </div>
     <div class="columns-9 w-row">
       <div class="w-col w-col-3">
@@ -85,9 +85,9 @@
     <div class="columns-8 w-row">
       <div class="w-col w-col-6">
         <div class="skh2">solution</div>
-        <div class="skpara left">A photo kiosk located near Pittsburgh public art locations. Residents and visitors can take photos of themselves with the art pieces and send it to their personal devices to share with their families and friends.  <br></div><img src="images/Screen-Shot-2020-11-18-at-6.51.49-PM.png" loading="lazy" sizes="(max-width: 479px) 61vw, (max-width: 767px) 63vw, (max-width: 991px) 31vw, 32vw" srcset="images/Screen-Shot-2020-11-18-at-6.51.49-PM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-6.51.49-PM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-6.51.49-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-6.51.49-PM.png 1172w" alt="" class="image-38">
+        <div class="skpara left">A photo kiosk located near Pittsburgh public art locations. Residents and visitors can take photos of themselves with the art pieces and send it to their personal devices to share with their families and friends.  <br></div><img src="images/Screen-Shot-2020-11-18-at-6.51.49-PM.png" loading="lazy" sizes="(max-width: 479px) 82vw, (max-width: 767px) 63vw, (max-width: 991px) 31vw, 32vw" srcset="images/Screen-Shot-2020-11-18-at-6.51.49-PM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-6.51.49-PM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-6.51.49-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-6.51.49-PM.png 1172w" alt="" class="image-38">
       </div>
-      <div class="w-col w-col-6"><img src="images/Frame-8.png" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 66vw, (max-width: 2694px) 67vw, 1805px" srcset="images/Frame-8-p-500.png 500w, images/Frame-8-p-800.png 800w, images/Frame-8-p-1080.png 1080w, images/Frame-8-p-1600.png 1600w, images/Frame-8.png 1805w" alt="" class="image-39"></div>
+      <div class="w-col w-col-6"><img src="images/Frame-8.png" loading="lazy" sizes="(max-width: 479px) 82vw, (max-width: 767px) 100vw, (max-width: 991px) 66vw, (max-width: 2694px) 67vw, 1805px" srcset="images/Frame-8-p-500.png 500w, images/Frame-8-p-800.png 800w, images/Frame-8-p-1080.png 1080w, images/Frame-8-p-1600.png 1600w, images/Frame-8.png 1805w" alt="" class="image-39"></div>
     </div>
   </div>
   <div></div>
